--- a/Resources/views/AuditFormField/_load.html.twig
+++ b/Resources/views/AuditFormField/_load.html.twig
@@ -1,5 +1,5 @@
 {% block body %}
-<tr class="wgaudit-field-row">
+<tr class="cisco-audit-field-row">
     <td>{{ field.title }}</td>
     <td>{{ field.description }}</td>
     <td>{{ field.weight }}</td>
@@ -12,17 +12,17 @@
     </td>
     <td>
         <div class="btn-group">
-            <a class="btn btn-mini wgaudit-field-view" data-field-id="{{ field.id }}" 
-               href="{{ path( 'wgauditformfield_view', { 'id': field.id } ) }}">
+            <a class="btn btn-mini cisco-audit-field-view" data-field-id="{{ field.id }}" 
+               href="{{ path( 'cisco_auditformfield_view', { 'id': field.id } ) }}">
                 <i class="icon-eye-open"></i> View
             </a>
             <noscript>
                 <a class="btn btn-mini"
-                    href="{{ path( 'wgauditformfield_edit', { 'id': field.id } ) }}">
+                    href="{{ path( 'cisco_auditformfield_edit', { 'id': field.id } ) }}">
                     <i class="icon-wrench"></i> Edit
                 </a>
                 <a class="btn btn-mini" 
-                   href="{{ path( 'wgauditformsection_remove', { 'id' : section.id ,'field_id': field.id } ) }}">
+                   href="{{ path( 'cisco_auditformsection_remove', { 'id' : section.id ,'field_id': field.id } ) }}">
                     <i class="icon-minus"></i> Remove
                 </a>                
             </noscript>
@@ -31,14 +31,14 @@
             </a>
             <ul class="dropdown-menu">
                 <li>
-                    <a class="wgaudit-field-edit" data-field-id="{{ field.id }}"
-                        href="{{ path( 'wgauditformfield_edit', { 'id': field.id } ) }}">
+                    <a class="cisco-audit-field-edit" data-field-id="{{ field.id }}"
+                        href="{{ path( 'cisco_auditformfield_edit', { 'id': field.id } ) }}">
                         <i class="icon-wrench"></i> Edit
                     </a>
                 </li>
                 <li>
-                    <a class="wgaudit-field-remove" data-field-id="{{ field.id }}"
-                       href="{{ path( 'wgauditformsection_remove', { 'id' : section.id ,'field_id': field.id } ) }}">
+                    <a class="cisco-audit-field-remove" data-field-id="{{ field.id }}"
+                       href="{{ path( 'cisco_auditformsection_remove', { 'id' : section.id ,'field_id': field.id } ) }}">
                         <i class="icon-minus"></i> Remove
                     </a>
                 </li>
