--- a/Resources/views/AuditFormSection/index.html.twig
+++ b/Resources/views/AuditFormSection/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'WGAuditBundle::base.html.twig' %}
+{% extends 'CiscoSystemsAuditBundle::base.html.twig' %}
 
 {% block body %}
 <div class="container">
@@ -6,7 +6,7 @@
         <legend>
             Sections
             <a class="btn btn-small pull-right"
-               href="{{ path( 'wgauditformsection_add' ) }}">
+               href="{{ path( 'cisco_auditformsection_add' ) }}">
                 <i class="icon-plus"></i> Add a section
             </a>
         </legend>
@@ -27,16 +27,16 @@
                         <td width="10%">
                             <div class="btn-group pull-right">
                                 <a class="btn btn-mini" 
-                                   href="{{ path( 'wgauditformsection_view', { 'id': section.id } ) }}">
+                                   href="{{ path( 'cisco_auditformsection_view', { 'id': section.id } ) }}">
                                     <i class="icon-eye-open"></i> View
                                 </a>
                                 <noscript>
                                     <a class="btn btn-mini"
-                                       href="{{ path( 'wgauditformsection_edit', { 'id': section.id } ) }}">
+                                       href="{{ path( 'cisco_auditformsection_edit', { 'id': section.id } ) }}">
                                         <i class="icon-wrench"></i> Edit
                                     </a>
                                     <a class="btn btn-mini"
-                                        href="{{ path( 'wgauditformsection_delete', { 'id': section.id } ) }}">
+                                        href="{{ path( 'cisco_auditformsection_delete', { 'id': section.id } ) }}">
                                         <i class="icon-trash"></i> Delete
                                     </a>
                                 </noscript>
@@ -46,14 +46,14 @@
                                 </a>
                                 <ul class="dropdown-menu">
                                     <li>
-                                        <a class="wgaudit-section-edit" data-section-id="{{ section.id }}"
-                                            href="{{ path( 'wgauditformsection_edit', { 'id': section.id } ) }}">
+                                        <a class="cisco-audit-section-edit" data-section-id="{{ section.id }}"
+                                            href="{{ path( 'cisco_auditformsection_edit', { 'id': section.id } ) }}">
                                             <i class="icon-wrench"></i> Edit
                                         </a>
                                     </li>
                                     <li>
-                                        <a class="wgaudit-section-delete" data-section-id="{{ section.id }}"
-                                            href="{{ path( 'wgauditformsection_delete', { 'id': section.id } ) }}">
+                                        <a class="cisco-audit-section-delete" data-section-id="{{ section.id }}"
+                                            href="{{ path( 'cisco_auditformsection_delete', { 'id': section.id } ) }}">
                                             <i class="icon-trash"></i> Delete
                                         </a>
                                     </li>
