--- a/Resources/views/AuditFormField/view.html.twig
+++ b/Resources/views/AuditFormField/view.html.twig
@@ -1,17 +1,17 @@
-{% extends 'WGAuditBundle::base.html.twig' %}
+{% extends 'CiscoSystemsAuditBundle::base.html.twig' %}
 
 {% block body %}
 <div class="container">
     <div class="span10 offset1">
         <legend>Field view
             <div class="btn-group pull-right">
-                <a class="btn btn-mini wgaudit-field-view" data-field-id="{{ field.id }}"
-                   href="{{ path( 'wgauditformfield_edit', { 'id': field.id } ) }}">
+                <a class="btn btn-mini cisco-audit-field-view" data-field-id="{{ field.id }}"
+                   href="{{ path( 'cisco_auditformfield_edit', { 'id': field.id } ) }}">
                     <i class="icon-wrench"></i> Edit
                 </a>
                 <noscript>
                     <a class="btn btn-mini"
-                        href="{{ path( 'wgauditformfield_delete', { 'id': field.id } ) }}">
+                        href="{{ path( 'cisco_auditformfield_delete', { 'id': field.id } ) }}">
                         <i class="icon-trash"></i> Delete
                     </a>
                 </noscript>
@@ -21,8 +21,8 @@
                 </a>
                 <ul class="dropdown-menu">
                     <li>
-                        <a class="wgaudit-field-delete" data-field-id="{{ field.id }}"
-                            href="{{ path( 'wgauditformfield_delete', { 'id': field.id } ) }}">
+                        <a class="cisco-audit-field-delete" data-field-id="{{ field.id }}"
+                            href="{{ path( 'cisco_auditformfield_delete', { 'id': field.id } ) }}">
                             <i class="icon-trash"></i> Delete
                         </a>
                     </li>
