--- a/Resources/views/AuditFormSection/view.html.twig
+++ b/Resources/views/AuditFormSection/view.html.twig
@@ -1,6 +1,6 @@
 {# AuditformSection::view.html.twig #}
 
-{% extends 'WGAuditBundle::base.html.twig' %}
+{% extends 'CiscoSystemsAuditBundle::base.html.twig' %}
 
 {% block body %}
 <div class="container">
@@ -8,12 +8,12 @@
         <legend>Section: {{ section.title }}
             <div class="btn-group pull-right">
                 <a class="btn btn-mini" 
-                   href="{{ path( 'wgauditformsection_edit', { 'id': section.id } ) }}">
+                   href="{{ path( 'cisco_auditformsection_edit', { 'id': section.id } ) }}">
                     <i class="icon-wrench"></i> Edit
                 </a>
                 <noscript>
                     <a class="btn btn-mini"
-                        href="{{ path( 'wgauditformsection_delete', { 'id': section.id } ) }}">
+                        href="{{ path( 'cisco_auditformsection_delete', { 'id': section.id } ) }}">
                         <i class="icon-trash"></i> Delete
                     </a>
                 </noscript>
@@ -22,7 +22,7 @@
                 </a>
                 <ul class="dropdown-menu">
                     <li>
-                        <a href="{{ path( 'wgauditformsection_delete', { 'id': section.id } ) }}">
+                        <a href="{{ path( 'cisco-auditformsection_delete', { 'id': section.id } ) }}">
                             <i class="icon-trash"></i> Delete
                         </a>
                     </li>
