--- a/Resources/views/base.html.twig
+++ b/Resources/views/base.html.twig
@@ -36,7 +36,7 @@
             <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
             <script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/js/bootstrap.min.js"></script>
             <script src="http://cdn.jquerytools.org/1.2.7/full/jquery.tools.min.js"></script>
-            <script src="{{ asset( 'bundles/wgaudit/js/wgaudit.js' ) }}" type="text/javascript"></script>
+            <script src="{{ asset( 'bundles/cisco_audit/js/cisco-audit.js' ) }}" type="text/javascript"></script>
     {% endblock %}
   </head>
   <body>
@@ -53,19 +53,19 @@
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li>
-                  <a href="{{ path( 'wgaudits' ) }}">view audit list</a>
+                  <a href="{{ path( 'cisco_audits' ) }}">view audit list</a>
               </li>
               <li>
-                  <a href="{{ path( 'wgauditforms' ) }}">view form list</a>
+                  <a href="{{ path( 'cisco_auditforms' ) }}">view form list</a>
               </li>
               <li>
-                  <a href="{{ path( 'wgauditformsections' ) }}">view section list</a>
+                  <a href="{{ path( 'cisco_auditformsections' ) }}">view section list</a>
               </li>
               <li>
-                  <a href="{{ path( 'wgauditformfields' ) }}">view field list</a>
+                  <a href="{{ path( 'cisco_auditformfields' ) }}">view field list</a>
               </li>
               <li>
-                  <a href="{{ path( 'wgaudit_iconset' )}}">view iconset</a>
+                  <a href="{{ path( 'cisco_audit_iconset' )}}">view iconset</a>
               </li>
             </ul>
           </div><!--/.nav-collapse -->
