--- a/Resources/views/base.html.twig
+++ b/Resources/views/base.html.twig
@@ -4,7 +4,7 @@
     {% block metas %}
       <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     {% endblock %}
-    <title>{% block title %}Written Games Audit Bundle{% endblock %}</title>
+    <title>{% block title %}Cisco Systems Audit Bundle{% endblock %}</title>
     {% block favicon %}{% endblock %}
     {% block stylesheets %}
         <link href='http://fonts.googleapis.com/css?family=Orienta' rel='stylesheet' type='text/css' />
@@ -36,7 +36,7 @@
             <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
             <script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/js/bootstrap.min.js"></script>
             <script src="http://cdn.jquerytools.org/1.2.7/full/jquery.tools.min.js"></script>
-            <script src="{{ asset( 'bundles/cisco_audit/js/cisco-audit.js' ) }}" type="text/javascript"></script>
+            <script src="{{ asset( 'bundles/ciscosystemsaudit/js/cisco-audit.js' ) }}" type="text/javascript"></script>
     {% endblock %}
   </head>
   <body>
