adding modal box (in progress)

--- a/Resources/views/Audit/index.html.twig
+++ b/Resources/views/Audit/index.html.twig
@@ -47,7 +47,11 @@
         {% else %}
                 <tr>
                     <td colspan="6">
-                        <p>Nothin yet dude</p>
+                        <div class="alert alert-error">
+                            <button type="button" class="close" data-dismiss="alert">×</button>
+                            <h4>Warning!</h4>
+                            <p>No audit yet.</p>
+                        </div>
                     </td>
                 </tr>
         {% endfor %}
