--- a/Resources/views/AuditFormField/index.html.twig
+++ b/Resources/views/AuditFormField/index.html.twig
@@ -36,7 +36,7 @@
                         </td>
                         <td>
                             <div class="btn-group pull-right">
-                                <a class="btn btn-mini cisco-audit-field-view" rel="#overlay"
+                                <a class="btn btn-mini cisco-audit-field-view"
                                    href="{{ path( 'cisco_auditformfield_view', { 'id': field.id } ) }}">
                                     <i class="icon-eye-open"></i> View
                                 </a>
@@ -73,50 +73,21 @@
                     </tr>
                 {% else %}
                     <tr>
-                        <td colspan="8" align="center">no fields yet</td>
+                        <td colspan="4">
+                            <div class="alert alert-error">
+                                <button type="button" class="close" data-dismiss="alert">×</button>
+                                <h4>Warning!</h4>
+                                <p>No fields yet.</p>
+                            </div>
+                        </td>
                     </tr>
                 {% endfor %}
             </tbody>
         </table>
     </div>
 </div>
-{#
 <script type="text/javascript">
-//$('.audit-section-row').next('.audit-form-field').css('background-color', 'yellow');
-//$('.audit-section-row').next('.audit-section-row').prev().css('background-color', 'red');
 
-
-$( function()
-{
-    // View Field
-    // load up load_view.html.twig in a modal box
-    //$( '.cisco-audit-field-view' ).click( function()
-    $( '.cisco-audit-field-view' ).overlay(
-    {
-        var url = $( this ).attr( 'href' );
-        $.ajax(
-        {
-            url: url,
-            type: "POST",
-            success: function( response )
-            {
-                onBeforeLoad: function() {
-
-                    // grab wrapper element inside content
-                    var wrap = this.getOverlay().find(".contentWrap");
-
-                    // load the page specified in the trigger
-                    wrap.load( response );
-                }
-            }
-            error: function( response )
-            {
-                console.log( 'can not do it .....' );
-            }
-        });       
-        return false;
-    });
-});
-</script>
-#}
+    </script>
+    
 {% endblock %}
