--- a/Resources/views/base.html.twig
+++ b/Resources/views/base.html.twig
@@ -8,6 +8,7 @@
     {% block favicon %}{% endblock %}
     {% block stylesheets %}
         <link href='http://fonts.googleapis.com/css?family=Orienta' rel='stylesheet' type='text/css' />
+        <link rel="stylesheet" href="http://code.jquery.com/ui/1.9.1/themes/base/jquery-ui.css" />
         <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/css/bootstrap-combined.min.css" rel="stylesheet" />
         <style type="text/css">
         body * {
@@ -16,26 +17,18 @@
         body {
             padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
         }
-        #overlay {
-        display:none;
-        width:400px;
-        border:10px solid #666;
-        border:10px solid rgba(82, 82, 82, 0.698);
-        -moz-border-radius:8px;
-        -webkit-border-radius:8px;
-        }
-        #overlay div {
-          padding:10px;
-          border:1px solid #3B5998;
-          background-color:#fff;
-          font-family:"lucida grande",tahoma,verdana,arial,sans-serif
+        .btn-round {
+            height: 25px;
+            width: 25px;
+            border: 1px solid #000;
+            border-radius: 18px;
         }
         </style>
     {% endblock %}
     {% block javascripts %}
-            <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+            <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+            <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
             <script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/js/bootstrap.min.js"></script>
-            <script src="http://cdn.jquerytools.org/1.2.7/full/jquery.tools.min.js"></script>
             <script src="{{ asset( 'bundles/ciscosystemsaudit/js/cisco-audit.js' ) }}" type="text/javascript"></script>
     {% endblock %}
   </head>
@@ -73,11 +66,12 @@
       </div>
     </div>
     {% endblock %}
-    {% block body %}
-    <div class="apple_overlay" id="overlay-box">
-        <div class="contentWrap"></div>
+    {% block modal %}
+    <div id="dialog-modal" title="Basic modal dialog" hidden="true">
+        <div class="modal-content">Adding the modal overlay screen makes the dialog look more prominent because it dims out the page content.</div>
     </div>
     {% endblock %}
+    {% block body %}{% endblock %}
   </body>
 </html>
 
