--- a/Resources/views/AuditFormField/_edit.html.twig
+++ b/Resources/views/AuditFormField/_edit.html.twig
@@ -1,5 +1,5 @@
 {% block body %}
-<form class="form" method="POST" action="">
+<form class="form-horizontal" method="POST" action="">
     <div class="controls controls-row">
         <div class="control-group">
             <div class="control-label">
