--- a/Resources/views/base.html.twig
+++ b/Resources/views/base.html.twig
@@ -18,10 +18,9 @@
             padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
         }
         .btn-round {
-            height: 25px;
-            width: 25px;
-            border: 1px solid #000;
-            border-radius: 18px;
+            height: 23px;
+            width: 18px;
+            border-radius: 50%;
         }
         </style>
     {% endblock %}
