--- a/Resources/views/AuditFormSection/edit.html.twig
+++ b/Resources/views/AuditFormSection/edit.html.twig
@@ -111,7 +111,13 @@
                 {% include 'CiscoSystemsAuditBundle:AuditFormField:_load.html.twig' %}
             {% else %}
                 <tr>
-                    <td class="5">no fields assigned yet</td>
+                    <td class="5">
+                        <div class="alert alert-error">
+                            <button type="button" class="close" data-dismiss="alert">×</button>
+                            <h4>Warning!</h4>
+                            <p>No fields yet.</p>
+                        </div>
+                    </td>
                 </tr>
             {% endfor %}
                 <noscript>
